updated dynamicCardDemo.html, testing links for online store

--- a/HTML/dynamicCardDemo.html
+++ b/HTML/dynamicCardDemo.html
@@ -9,13 +9,9 @@
 
 <head>
     <title>Dynamic Card Demo</title>
-    <link rel="stylesheet" type="text/css" href="layout.css">
+    <link rel="stylesheet" type="text/css" href="/CSS/layout.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <style>
-        .content_area {
-            background-image: url("/420710/Images/cool-background.png");
-        }
-
         #cardContainer {
             width: 100%;
             height: 100%;
@@ -25,86 +21,8 @@
 </head>
 
 <body>
-    <header>
-        <div class="header">
-            <div class="menu">
-                <nav>
-                    <input type="checkbox" id="show-search">
-                    <input type="checkbox" id="show-menu">
-                    <label for="show-menu" class="menu-icon"><i class="fas fa-bars"></i></label>
-                    <div class="menu_content">
-                        <div class="logo"><a href="#">CaLove</a></div>
-                        <ul class="links">
-                            <li><a href="/420710/index.html">Home</a></li>
-                            <li>
-                                <a href="#" class="desktop-link">HTML Code</a>
-                                <input type="checkbox" id="show-html">
-                                <label for="show-html">HTML Code</label>
-                                <ul>
-                                    <li><a href="Facts_About_Snowboarding.html">Facts about Snowboarding</a></li>
-                                    <li><a href="Facts_About_Apples.html">Facts about Apples</a></li>
-                                    <li><a href="Facts_About_Sushi.html">Facts about Sushi</a></li>
-                                    <li><a href="sortDemo.html">Sort Demo</a></li>
-                                    <li><a href="ButtonMove.html">Moving Buttons</a></li>
-                                    <li><a href="cards.html">Card Demo</a></li>
-                                    <li><a href="keyPress.html">keyPress Demo</a></li>
-                                    <li><a href="prime.html">Prime Numbers</a></li>
-                                    <li><a href="dynamicCardDemo.html">Dynamic Card Demo</a></li>
-                                    <li><a href="jQueryDemo.html">jQuery Demo</a></li>
-                                    <li>
-                                        <a href="#" class="desktop-link">HTML with Pictures</a>
-                                        <input type="checkbox" id="show-htmlp">
-                                        <label for="show-htmlp">HTML with Pictures</label>
-                                        <ul>
-                                            <li><a href="Ski_Maps.html">Link to Ski Maps</a></li>
-                                            <li><a href="Apple_Pictures.html">Link to More Apple Pictures</a></li>
-                                            <li><a href="Sushi_Pictures.html">Link to More Sushi Pictures</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#" class="desktop-link">CSS Code</a>
-                                <input type="checkbox" id="show-css">
-                                <label for="show-css">CSS Code</label>
-                                <ul>
-                                    <li><a href="layout.css">layout.css</a></li>
-                                    <li><a href="ButtonMove.css">ButtonMove.css</a></li>
-                                    <li><a href="prime.css">prime.css</a></li>
-                                    <li><a href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">Font File</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#" class="desktop-link">JavaScript Code</a>
-                                <input type="checkbox" id="show-js">
-                                <label for="show-js">JavaScript Code</label>
-                                <ul>
-                                    <li><a href="chapter04.html">Chapter04.html</a></li>
-                                    <li><a href="ButtonMove.js">ButtonMove.js</a></li>
-                                    <li><a href="cards.js">cards.js</a></li>
-                                    <li><a href="prime.js">prime.js</a></li>
-                                    <li><a href="/JS/loops.js">loops.js</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#" class="desktop-link">PHP Code</a>
-                                <input type="checkbox" id="show-php">
-                                <label for="show-php">PHP Code</label>
-                                <ul>
-                                    <li><a href="helloworld.php">Helloworld.php</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                    <label for="show-search" class="search-icon"><i class="fas fa-search"></i></label>
-                    <form action="#" class="search-box">
-                        <input type="text" placeholder="Type Something to Search..." required>
-                        <button type="submit" class="go-icon"><i class="fas fa-long-arrow-alt-right"></i></button>
-                    </form>
-                </nav>
-            </div>
-        </div>
-    </header>
+    <!--Navbar Menu-->
+    <header><div class="header" id="navbar"></div></header>
 
     <div class="wrapper">
         <div class="content_area">
@@ -115,7 +33,7 @@
                     <div class="button-container">
                         <input type="button" class="button" value="Add New Card" onclick="createCard()">
                         <input type="button" class="button" value="Display All Cards" onclick="displayAllCards()">
-                    <script type="text/javascript" src="/420710/JS/loops.js"></script>
+                    <script type="text/javascript" src="/JS/loops.js"></script>
                     </div>
                 </section>
             </div>
@@ -124,7 +42,7 @@
         <div class="left_side">
             <ul>
                 <div class="navHead"><h1><strong>Sections</strong></h1><hr>
-                <li><a href="/420710/index.html">Home</a><br></li>
+                <li><a href="/HTML/index.html">Home</a><br></li>
                 <li><a href="mailto:calove@g.clemson.edu">Email</a></li></div>
             </ul>
         </div>
@@ -136,6 +54,28 @@
 
     </div>
     <footer>|Created by calove (6/30/2023)|</footer>
+
+    <script>
+        // Fetch the content of menu.html and insert it into the div with id "navbar"
+        fetch('menu.html')
+            .then(response => response.text())
+            .then(data => {
+                // Create a temporary element to parse the fetched HTML
+                const tempDiv = document.createElement('div');
+                tempDiv.innerHTML = data;
+    
+                // Find the menu div within the fetched content
+                const menuContent = tempDiv.querySelector('.menu');
+    
+                // Insert the menu content into the header div if it exists
+                if (menuContent) {
+                    document.getElementById('navbar').appendChild(menuContent);
+                } else {
+                    console.error('Menu content not found in menu.html');
+                }
+            })
+            .catch(error => console.error('Error loading the navbar:', error));
+    </script>
 </body>
 
 </html>
