--- a/HTML/index.html
+++ b/HTML/index.html
@@ -131,7 +131,7 @@
 
                     <ul>
                         <h2><strong>Online Store</strong></h2><hr>
-                        <li><a href="/onlineStore/index.html">Online Store Index</a></li>
+                        <li><a href="/onlineStore/home.php">Online Store Index</a></li>
                     </ul>
 
                     <table>
