--- a/HTML/index.html
+++ b/HTML/index.html
@@ -66,7 +66,7 @@
             <div class="content_area">
                 <div class="index">
                     <ul>
-                        <h1><strong>Index</strong></h1>
+                        <h1><strong>About Me</strong></h1>
                         <hr>
                         <h2><strong>HTML</strong></h2>
                         <hr>
