created new index to show experience

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -53,13 +53,17 @@
             margin-top: 5px;
             width: 15%;
         }
-
+    .index li {
+        color: black;
+    }
     </style>
 </head>
 
 <body>
     <!--Navbar Menu-->
-    <header><div class="header" id="navbar"></div></header>
+    <header>
+        <div class="header" id="navbar"></div>
+    </header>
 
     <div class="wrapper">
         <nav>
@@ -68,70 +72,59 @@
                     <ul>
                         <h1><strong>About Me</strong></h1>
                         <hr>
-                        <h2><strong>HTML</strong></h2>
+                        <h2><strong>Code Language Experience</strong></h2>
                         <hr>
-                        <li><a href="/HTML/Facts_About_Snowboarding.html">Facts about Snowboarding </a></li>
-                        <li><a href="/HTML/Facts_About_Apples.html">Facts about Apples </a></li>
-                        <li><a href="/HTML/Facts_About_Sushi.html">Facts about Sushi </a></li>
-                        <li><a href="/HTML/Ski_Maps.html">Ski Maps</a></li>
-                        <li><a href="/HTML/Apple_Pictures.html">More Apple Pictures</a></li>
-                        <li><a href="/HTML/Sushi_Pictures.html">More Sushi Pictures</a></li>
-                        <li><a href="/HTML/sortDemo.html">Sort Demo</a></li>
-                        <li><a href="/HTML/ButtonMove.html">Moving Buttons</a></li>
-                        <li><a href="/HTML/cards.html">Card Demo</a></li>
-                        <li><a href="/HTML/keypress.html">keyPress Demo</a></li>
-                        <li><a href="/HTML/prime.html">Prime Numbers</a></li>
-                        <li><a href="/HTML/jQueryDemo.html">jQuery Demo</a></li>
-                        <li><a href="/HTML/dynamicCardDemo.html">Dynamic Card Demo</a></li>
-                        <li><a href="/HTML/AJAXandPHP.html">AJAX and PHP Demo</a></li>
-                        <li><a href="/HTML/audioDemo.html">Audio Demo</a></li>
-                        <li><a href="/HTML/DMMTExamples.html">DMMT Examples</a></li>
-                        <li><a href="/HTML/pokemon_collect_app_p1.html">Collect App Phase 1</a></li>
-                        <li><a href="/HTML/insert_form.html">CREATE DB</a></li>
-                        <li><a href="/HTML/helloworld.html">Hello World!</a></li>
+                        <strong>
+                            <li>AJAX</li>
+                            <li>C</li>
+                            <li>C++</li>
+                            <li>CSS</li>
+                            <li>HTML</li>
+                            <li>JavaScript</li>
+                            <li>JSON</li>
+                            <li>mySQL</li>
+                            <li>noSQL</li>
+                            <li>PHP</li>
+                            <li>Python</li>
+                            <li>TypeScript</li>
+                            <li>XML</li>
+                            <li>YAML</li>
+                        </strong>
                         <hr>
                     </ul>
 
                     <ul>
-                        <h2><strong>JavaScript</strong></h2>
+                        <h2><strong>Code Library Experience</strong></h2>
                         <hr>
-                        <li><a href="/onlineStore/seestore_withJS.php.html">FINAL PROJECT</a></li>
-                        <li><a href="/HTML/chapter04.html">Chapter04.html</a>
-                        </li>
-                        <li><a href="/JS/ButtonMove.js">ButtonMove.js</a></li>
-                        <li><a href="/JS/cards.js">cards.js</a></li>
-                        <li><a href="/JS/prime.js">prime.js</a></li>
-                        <li><a href="/JS/loops.js">loops.js</a></li>
+                        <strong>
+                            <li>React</li>
+                            <li>Node</li>
+                            <li>jQuery</li>
+                            <li>pyGame</li>
+                        </strong>
+                        <hr>
+                    </ul>
+                    <ul>
+                        <h2><strong>Other Experience</strong></h2>
+                        <hr>
+                        <strong>
+                            <li>Amazon AWS</li>
+                            <li>Azure DevOps</li>
+                            <li>Command Line</li>
+                            <li>IntelliJ IDEA</li>
+                            <li>Linux</li>
+                            <li>MySQL Shark</li>
+                            <li>Postman</li>
+                            <li>Trello</li>
+                            <li>VS Code</li>
+                        </strong>
                         <hr>
                     </ul>
 
                     <ul>
-                        <h2><strong>PHP</strong></h2>
+                        <h2><strong>Webpage Project</strong></h2>
                         <hr>
-                        <li><a href="/PHP/calove_CardCollectAppP2/pokemon_collect_app_p2.php">Collect App Phase Link 1</a></li>
-                        <li><a href="/PHP/pokemon_collect_app_p2.php">Collect App Phase Link 2</a></li>
-                        <li><a href="/PHP/Exam2.php">Exam2.php</a></li>
-                        <li><a href="/PHP/helloworld.php">helloworld.php</a></li>
-                        <li><a href="/PHP/IO_app.php">PHP File I/O App</a></li>
-                        <li><a href="/420710/seestore.php">seestore.php</a></li>
-                        <li><a href="/420710/seestore_withJS.php">seestore_withJS.php</a></li>
-                        <li><a href="/420710/showitem.php">showitem.php</a></li>
-                        <hr>
-                    </ul>
-
-                    <ul>
-                        <h2><strong>CSS</strong></h2>
-                        <hr>
-                        <li><a href="/HTML/chapter04.html">Chapter04.html</a></li>
-                        <li><a href="/CSS/cards.css">cards.css</a></li>
-                        <li><a href="/CSS/prime.css">prime.css</a>
-                        </li>
-                        <hr>
-                    </ul>
-
-                    <ul>
-                        <h2><strong>Online Store</strong></h2><hr>
-                        <li><a href="/onlineStore/home.php">Online Store Index</a></li>
+                        <li><a href="/HTML/Summer23Project_index.html">Link to Webpage Index</a></li>
                     </ul>
 
                     <table>
@@ -168,7 +161,7 @@
         </nav>
     </div>
     <footer>
-        <div id="footer">|Created by calove (6/18/2023)|</div>
+        <div id="footer">|Created by calove (9/17/2024)|</div>
     </footer>
 
     <script>
@@ -179,10 +172,10 @@
                 // Create a temporary element to parse the fetched HTML
                 const tempDiv = document.createElement('div');
                 tempDiv.innerHTML = data;
-    
+
                 // Find the menu div within the fetched content
                 const menuContent = tempDiv.querySelector('.menu');
-    
+
                 // Insert the menu content into the header div if it exists
                 if (menuContent) {
                     document.getElementById('navbar').appendChild(menuContent);
