Added Info about me into content area

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -57,6 +57,10 @@
         .index li {
             color: black;
         }
+        #centered_text {
+            text-align: center;
+            color: black;
+        }
     </style>
 </head>
 
@@ -72,6 +76,10 @@
                 <div class="index">
                     <ul>
                         <h1><strong>About Me</strong></h1>
+                        <div id="centered_text">
+                            Graduated May 9th 2024 from Clemson University<br>
+                            Major: Computer Information Systems | Minor: Business Administration
+                        </div>
                         <hr>
                         <h2><strong>Code Language Experience</strong></h2>
                         <hr>
