Added Resume Link

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -61,6 +61,12 @@
             text-align: center;
             color: black;
         }
+        #resume_link {
+            text-decoration: none;
+        }
+        #resume_link:hover {
+            color: #F56600;
+        }
     </style>
 </head>
 
@@ -78,7 +84,8 @@
                         <h1><strong>About Me</strong></h1>
                         <div id="centered_text">
                             Graduated May 9th 2024 from Clemson University<br>
-                            Major: Computer Information Systems | Minor: Business Administration
+                            Major: Computer Information Systems | Minor: Business Administration<br>
+                            <strong><a id="resume_link" href="../CLove_Resume.pdf">Resume Link</a></strong>
                         </div>
                         <hr>
                         <h2><strong>Code Language Experience</strong></h2>
