Changed Resume Link color to Clemson Orange

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -63,6 +63,7 @@
         }
         #resume_link {
             text-decoration: none;
+            color: #522D80;
         }
         #resume_link:hover {
             color: #F56600;
