Updated About Me section formatting

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -82,10 +82,10 @@
             <div class="content_area">
                 <div class="index">
                     <ul>
-                        <h1><strong>About Me</strong></h1>
+                        <h1 style="color: #522D80;"><strong>About Me</strong></h1><hr>
                         <div id="centered_text">
                             Graduated May 9th 2024 from Clemson University<br>
-                            Major: Computer Information Systems | Minor: Business Administration<br>
+                            <strong>Major:</strong> Computer Information Systems | <strong>Minor:</strong> Business Administration<br>
                             <strong><a id="resume_link" href="../CLove_Resume.pdf">Resume Link</a></strong>
                         </div>
                         <hr>
