Added more experience to index.html

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -57,14 +57,17 @@
         .index li {
             color: black;
         }
+
         #centered_text {
             text-align: center;
             color: black;
         }
+
         #resume_link {
             text-decoration: none;
             color: #522D80;
         }
+
         #resume_link:hover {
             color: #F56600;
         }
@@ -82,10 +85,12 @@
             <div class="content_area">
                 <div class="index">
                     <ul>
-                        <h1 style="color: #522D80;"><strong>About Me</strong></h1><hr>
+                        <h1 style="color: #522D80;"><strong>About Me</strong></h1>
+                        <hr>
                         <div id="centered_text">
                             Graduated May 9th 2024 from Clemson University<br>
-                            <strong>Major:</strong> Computer Information Systems | <strong>Minor:</strong> Business Administration<br>
+                            <strong>Major:</strong> Computer Information Systems | <strong>Minor:</strong> Business
+                            Administration<br>
                             <strong><a id="resume_link" href="../CLove_Resume.pdf">Resume Link</a></strong>
                         </div>
                         <hr>
@@ -115,9 +120,16 @@
                         <hr>
                         <strong>
                             <li>React</li>
-                            <li>Node</li>
                             <li>jQuery</li>
                             <li>pyGame</li>
+                        </strong>
+                        <hr>
+                    </ul>
+                    <ul>
+                        <h2><strong>Framework Experience</strong></h2>
+                        <hr>
+                        <strong>
+                            <li>Next</li>
                         </strong>
                         <hr>
                     </ul>
@@ -125,15 +137,22 @@
                         <h2><strong>Other Experience</strong></h2>
                         <hr>
                         <strong>
+                            <li>Anaconda</li>
+                            <li>Agile</li>
                             <li>Amazon AWS</li>
                             <li>Azure DevOps</li>
                             <li>Command Line</li>
                             <li>IntelliJ IDEA</li>
+                            <li>Google DevTools</li>
                             <li>Linux</li>
+                            <li>Microsoft Access</li>
+                            <li>Microsoft Excel</li>
                             <li>MySQL Shark</li>
+                            <li>Node.js</li>
+                            <li>phpMyAdmin</li>
                             <li>Postman</li>
                             <li>Trello</li>
-                            <li>VS Code</li>
+                            <li>Visual Studio Code</li>
                         </strong>
                         <hr>
                     </ul>
@@ -142,6 +161,7 @@
                         <h2><strong>Webpage Project</strong></h2>
                         <hr>
                         <li><a href="/HTML/Summer23Project_index.html">Link to Webpage Index</a></li>
+                        <hr>
                     </ul>
 
                     <table>
