Added hr elements for formatting

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,6 +1,6 @@
 <!--Connor Love-->
-<!--6/18/2023-->
-<!--Index-->
+<!--9/18/2023-->
+<!--ConnorLove0.git.io Index-->
 <!--Senior-->
 
 <!DOCTYPE html>
